--- a/about.html
+++ b/about.html
@@ -159,12 +159,21 @@
                             </div>
                         </div>
                         <div class="project-item">
-                            <h4 class="project-title">AI医学影像分析平台</h4>
+                            <h4 class="project-title">AI医学影像分析平台 <a href="https://yii233.netlify.app/#dashboard" target="_blank" class="project-link" title="在线体验"><i class="fas fa-external-link-alt"></i></a></h4>
                             <p class="project-description">前端重构优化，UI/UX重新设计，信息展示清晰度提升50%</p>
                             <div class="tech-pills">
                                 <span class="tech-pill">React</span>
                                 <span class="tech-pill">Ant Design</span>
                                 <span class="tech-pill">ECharts</span>
+                            </div>
+                        </div>
+                        <div class="project-item">
+                            <h4 class="project-title">旅U（旅行社交平台） <a href="https://t-u.netlify.app" target="_blank" class="project-link" title="在线体验"><i class="fas fa-external-link-alt"></i></a></h4>
+                            <p class="project-description">React单页面应用，响应式设计，快速交付高保真原型，成功部署上线</p>
+                            <div class="tech-pills">
+                                <span class="tech-pill">React</span>
+                                <span class="tech-pill">SPA</span>
+                                <span class="tech-pill">响应式设计</span>
                             </div>
                         </div>
                     </div>
